Refactor field strategies to support processing lazily loaded values directly.